# tic-tac-toe

./: README.md  main.py  manager.py  pyproject.toml  requirements.txt  services.py
templates/: client.html  client.py
