[tool.poetry]
name = "websockets-tic-tac-toe"
version = "0.1.0"
description = ""
authors = ["Beknazar <abdyldaevgroup@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.0"
pydantic = "^2.8.2"
uvicorn = "^0.30.5"
websockets = "^12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
